<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosActivity">

    <TextView
        android:id="@+id/p2txtingrese"
        android:layout_width="299dp"
        android:layout_height="37dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/p2txtingrese"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/p2txtnombre"
        android:layout_width="375dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/p2lblnombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2txtingrese" />

    <EditText
        android:id="@+id/p2txtedad"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/p2lbledad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2txtnombre" />

    <EditText
        android:id="@+id/p2txtcorreo"
        android:layout_width="387dp"
        android:layout_height="49dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/p2lblcorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2txtedad" />

    <Button
        android:id="@+id/p2btnregresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/p2btnregresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2txtcorreo" />

    <Button
        android:id="@+id/p2btncancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/p2btncancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2txtcorreo" />
</androidx.constraintlayout.widget.ConstraintLayout>